--- a/web/www/templates/studygroups.html
+++ b/web/www/templates/studygroups.html
@@ -1,8 +1,8 @@
-<ion-view view-title="Playlists">
+<ion-view view-title="Study groups">
   <ion-content>
     <ion-list>
-      <ion-item ng-repeat="playlist in playlists" href="#/app/playlists/{{playlist.id}}">
-        {{playlist.title}}
+      <ion-item ng-repeat="studygroup in studygroups" href="#/app/studygroups/{{studygroup.id}}">
+        {{studygroup.title}}
       </ion-item>
     </ion-list>
   </ion-content>
