--- a/web/www/templates/studygroups.html
+++ b/web/www/templates/studygroups.html
@@ -2,9 +2,8 @@
   <ion-content>
     <ion-list>
       <ion-item ng-repeat="studygroup in studygroups" href="#/app/studygroups/{{studygroup.id}}">
-        {{studygroup.title}}
+        {{studygroup.name}}
       </ion-item>
     </ion-list>
   </ion-content>
-  <button class="button button-fab button-fab-bottom-right button-assertive icon ion-paper-airplane waves-effect waves-button waves-light"></button>
 </ion-view>
