--- a/web/www/css/style.css
+++ b/web/www/css/style.css
@@ -1,1 +1,12 @@
 /* Empty. Add your own CSS if you like */
+.slider{
+	height:100%;
+	width:100%;
+	position:relative;
+	background-color:#AA0000;
+}
+
+
+.scroll{
+	height:100%;
+}
