--- a/web/www/templates/authView.html
+++ b/web/www/templates/authView.html
@@ -1,14 +1,49 @@
-<div class="col-sm-4 col-sm-offset-4">
-    <div class="well">
-        <h3>Login</h3>
-        <form>
-            <div class="form-group">
-                <input type="email" class="form-control" placeholder="Email" ng-model="auth.email">
-            </div>
-            <div class="form-group">
-                <input type="password" class="form-control" placeholder="Password" ng-model="auth.password">
-            </div>
-            <button class="btn btn-primary" ng-click="auth.login()">Submit</button>
-        </form>
-    </div>
-</div>
+<!--Authentication view: Login and Sign up pages are sliders that swithces between pages by swiping the screen or clicking the pager-->
+<link href="css/style.css" rel="stylesheet">
+<body ng-controller="AppCtrl">
+	<ion-slide-box pager-click="changeSlide(index)">
+		<ion-slide>
+			<ion-header-bar class="bar-dark"><h1 class="title">Login</h1></ion-header-bar>
+			
+			<div class="col-sm-4 col-sm-offset-4 ">
+				<div class="well list padding has-header">  
+				<img class="item item-image" src="..\img\slogo3.png"> 
+					<form>
+						<div class="form-group">
+							<label class="item item-input">
+								<span class="input-label">Email:</span>
+								<input type="email" class="form-control" placeholder="...@sfu.ca" ng-model="auth.email">
+							</label>
+						</div>
+						
+						<div class="form-group">
+							<label class="item item-input">
+								<span class="input-label">Password:</span>
+								<input type="password" class="form-control" placeholder="Password" ng-model="auth.password">
+							</label>
+						</div>
+						<button class="btn btn-primary button button-dark" ng-click="auth.login()">Submit</button>
+					</form>
+					
+				</div>
+				
+			</div>
+			
+		</ion-slide>
+		
+		<ion-slide>
+			<ion-header-bar class="bar-dark"><h1 class="title">Sign Up</h1></ion-header-bar>
+			<div>
+				<div class="list has-header padding">
+					<img class="item item-image" src="..\img\slogo3.png"> 
+					<label class = "item item-input">
+						<span class="input-label">Email:</span>
+					</label>
+					<label class = "item item-input">
+						<span class="input-label">Password:</span>
+					</label>
+				</div>
+			</div>
+		</ion-slide>
+	</ion-slide-box>
+</body>
