--- a/web/www/templates/menu.html
+++ b/web/www/templates/menu.html
@@ -28,7 +28,10 @@
           Browse
         </ion-item>
         <ion-item menu-close href="#/app/studygroups">
-          Groups
+          Groups  
+        </ion-item>
+		<ion-item menu-close href="#/app/profile">
+          Profile  
         </ion-item>
       </ion-list>
     </ion-content>
