--- a/web/www/templates/menu.html
+++ b/web/www/templates/menu.html
@@ -1,9 +1,8 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
-    <ion-nav-bar class="bar-stable">
+    <ion-nav-bar class="bar-dark">
       <ion-nav-back-button>
       </ion-nav-back-button>
-
       <ion-nav-buttons side="left">
         <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
         </button>
@@ -13,22 +12,22 @@
   </ion-side-menu-content>
 
   <ion-side-menu side="left" expose-aside-when="large">
-    <ion-header-bar class="bar-stable">
-      <h1 class="title">Left</h1>
+    <ion-header-bar class="bar-dark">
+      <h1 class="title">Menu</h1>
     </ion-header-bar>
-    <ion-content>
+    <ion-content  style="background-color:white">
       <ion-list>
-        <ion-item menu-close ng-click="login()">
-          Login
+        <ion-item menu-close href="#/app/home">
+          Home
         </ion-item>
         <ion-item menu-close href="#/app/search">
-          Search
+          Search Groups
         </ion-item>
-        <ion-item menu-close href="#/app/browse">
-          Browse
+        <ion-item menu-close href="#/app/createGroups">
+          Create Groups
         </ion-item>
-        <ion-item menu-close href="#/app/studygroups">
-          Groups
+        <ion-item menu-close>
+          Log Out
         </ion-item>
       </ion-list>
     </ion-content>
