--- a/web/www/templates/search.html
+++ b/web/www/templates/search.html
@@ -1,5 +1,7 @@
 <ion-view view-title="Search">
   <ion-content>
-    <h1>Search</h1>
+	<ion-list class="card">
+		<ion-item class="item-divider">Search by Filters</ion-item>
+	</ion-list>
   </ion-content>
 </ion-view>
