--- a/web/www/templates/menu.html
+++ b/web/www/templates/menu.html
@@ -26,7 +26,7 @@
         <ion-item menu-close href="#/app/createGroups">
           Create Groups
         </ion-item>
-        <ion-item menu-close>
+        <ion-item menu-close href="#/logout">
           Log Out
 		</ion-item>
         <ion-item menu-close href="#/app/studygroups">
