--- a/web/www/templates/search.html
+++ b/web/www/templates/search.html
@@ -2,6 +2,32 @@
   <ion-content>
 	<ion-list class="card">
 		<ion-item class="item-divider">Search by Filters</ion-item>
+		<!--<form ng-submit="searchInput(groupID)">
+			<ion-item >
+				<label class="item-input item-select">
+					<span class="input-label">Course</span>
+					<select>
+					  <option>courses</option>
+					</select>
+				</label>
+			</ion-item>
+			<ion-item>
+				<label class="item-input item-select">
+					<span class="input-label">Time</span>
+					<select>
+					  <option>Blue</option>
+					</select>
+				</label>
+			</ion-item>
+			<ion-item>
+				<label class="item-input item-select">
+					<span class="input-label">Capacity</span>
+					<select>
+					  <option>Blue</option>
+					</select>
+				</label>
+			</ion-item>
+		</form>-->
 	</ion-list>
   </ion-content>
 </ion-view>
