--- a/web/www/templates/authView.html
+++ b/web/www/templates/authView.html
@@ -1,12 +1,16 @@
 <!--Authentication view: Login and Sign up pages are sliders that swithces between pages by swiping the screen or clicking the pager-->
 <link href="css/style.css" rel="stylesheet">
 <ion-content ng-controller="AppCtrl">
+
 	<ion-slide-box pager-click="changeSlide(index)">
+	
 		<ion-slide>
-			<ion-header-bar class="bar-dark"><h1 class="title">Login</h1></ion-header-bar>
+		<ion-scroll zooming="true" direction="xy" style="height: 100%">
+		<ion-header-bar class="bar-dark"><h1 class="title">Login</h1></ion-header-bar>
+		
 			<div class="col-sm-4 col-sm-offset-4 ">
-				<div class="well list padding has-header">  
-				<img class="item item-image" src="..\img\slogo3.png"> 
+				<div class="well list padding has-header"> 
+				<img class="item item-image" src="..\img\slogo3.png">
 					<form>
 						<div class="form-group">
 							<label class="item item-input">
@@ -25,9 +29,12 @@
 					</form>
 				</div>
 			</div>
+		</ion-scroll>
 		</ion-slide>
+	
 		
 		<ion-slide>
+		<ion-scroll zooming="true" direction="xy" style="height: 100%">
 			<ion-header-bar class="bar-dark"><h1 class="title">Sign Up</h1></ion-header-bar>
 			<div>
 				<div class="list has-header padding">
@@ -43,6 +50,8 @@
                     <button class="btn btn-primary button button-dark button-block" ng-click="auth.signup()">Sign Up</button>
 				</div>
 			</div>
+			
+		</ion-scroll>	
 		</ion-slide>
 	</ion-slide-box>
 </ion-content>
