2 inputs for course: courseCode, courseNumber

--- a/web/www/templates/createGroups.html
+++ b/web/www/templates/createGroups.html
@@ -6,11 +6,11 @@
 			<ion-item class="item-input">
 				<label>
 					<span class="input-label">Course Code</span>
-					<input type="text" ng-model="create.course">
+					<input type="text" ng-model="create.courseCode">
 				</label>
 				<label>
 					<span class="input-label">Course Number</span>
-					<input type="text" ng-model="create.course">
+					<input type="text" ng-model="create.courseNumber">
 				</label>
 			</ion-item>
 			<ion-item class="item-input">
