--- a/web/www/templates/profile.html
+++ b/web/www/templates/profile.html
@@ -13,9 +13,16 @@
 					<span class="input-label">Username</span>
 					<input type="text" ng-model="profile.username">
 				</label>
-				<label class="item item-input">
+				<label>
 					<span class="input-label">Program</span>
-					<input type="text" ng-model="profile.program">
+					<select ng-model="profile.program">
+					  <option>Arts</option>
+					  <option>Business</option>
+					  <option>Communications</option>
+					  <option>Computing Science</option>
+					  <option>Engineering</option>
+					  <option>Whateever else</option>
+					</select>
 				</label>
 				<label class="item">
 					<button class="button button-block button-positive" type="submit">Save</button>
