Made it prettier

--- a/web/www/templates/profile.html
+++ b/web/www/templates/profile.html
@@ -13,6 +13,7 @@
 					<span class="input-label">Username</span>
 					<input type="text" ng-model="profile.username">
 				</label>
+				<label class="item item-input">
 				<label>
 					<span class="input-label">Program</span>
 					<select ng-model="profile.program">
@@ -23,6 +24,7 @@
 					  <option>Engineering</option>
 					  <option>Whateever else</option>
 					</select>
+				</label>
 				</label>
 				<label class="item">
 					<button class="button button-block button-positive" type="submit">Save</button>
