--- a/web/www/templates/search.html
+++ b/web/www/templates/search.html
@@ -2,7 +2,7 @@
   <ion-content>
 	<ion-list class="card">
 		<ion-item class="item-divider">Search by Filters</ion-item>
-		<!--<form ng-submit="searchInput(groupID)">
+		<form <!--ng-submit="searchInput(groupID)"-->>
 			<ion-item >
 				<label class="item-input item-select">
 					<span class="input-label">Course</span>
@@ -15,7 +15,7 @@
 				<label class="item-input item-select">
 					<span class="input-label">Time</span>
 					<select>
-					  <option>Blue</option>
+					  <option>1:00</option>
 					</select>
 				</label>
 			</ion-item>
@@ -23,11 +23,11 @@
 				<label class="item-input item-select">
 					<span class="input-label">Capacity</span>
 					<select>
-					  <option>Blue</option>
+					  <option>1</option>
 					</select>
 				</label>
 			</ion-item>
-		</form>-->
+		</form>
 	</ion-list>
   </ion-content>
 </ion-view>
