--- a/web/www/templates/profile.html
+++ b/web/www/templates/profile.html
@@ -4,11 +4,12 @@
 	<ion-list>
 		<ion-item>{{ profile.email }}</ion-item>
 		<form ng-submit="updateProfile()">
+			<!--<i class="padding item icon ion-person"></i>-->
 			<div class="list">
 				<label class="item item-input">
 					<input type="file" name="filename" accept="image/gif, image/jpeg, image/png" onchange="readURL(this);" ng-model="profile.picture">
 				</label>
-				<img id="image-holder" src="#" alt="your image" />
+				<img id="image-holder" src="#" alt="your image"/>
 				<label class="item item-input">
 					<span class="input-label">Username</span>
 					<input type="text" ng-model="profile.username">
