changes studygroup page

--- a/web/www/templates/studygroup.html
+++ b/web/www/templates/studygroup.html
@@ -1,13 +1,13 @@
-<ion-view view-title="Playlist">
+<ion-view view-title="StudyGroup">
   <ion-content>
     <ion-list>
-		<ion-item ng-repeat="studygroup in studygroups">
-			{{studygroup.course}}
-			{{studygroup.startTime}}
-			{{studygroup.date}}
-			{{studygroup.capacity}}
-			{{studygroup.location}}
-			{{studygroup.description}}
+		<ion-item>
+			{{group.course}}
+			{{group.startTime}}
+			{{group.date}}
+			{{group.capacity}}
+			{{group.location}}
+			{{group.description}}
       </ion-item>
 	</ion-list>
   </ion-content>
