--- a/web/www/templates/createGroups.html
+++ b/web/www/templates/createGroups.html
@@ -38,7 +38,7 @@
 			<ion-item class="item-input">
 				<label>
 					<span class="input-label">Date</span>
-					<input type="date" ng-model="date">
+					<input type="date" ng-model="create.date">
 				</label>
 			</ion-item>
 			<ion-item class="item-input">
