course codes options

--- a/web/www/templates/studygroup.html
+++ b/web/www/templates/studygroup.html
@@ -3,12 +3,23 @@
     <ion-list>
 		<ion-item>
 			{{group.course}}
+		</ion-item>
+		<ion-item>
 			{{group.startTime}}
+		</ion-item>
+		<ion-item>
 			{{group.date}}
+		</ion-item>
+		<ion-item>
 			{{group.capacity}}
+		</ion-item>
+		<ion-item>
 			{{group.location}}
+		</ion-item>
+		<ion-item>
 			{{group.description}}
-      </ion-item>
+		</ion-item>
 	</ion-list>
+	
   </ion-content>
 </ion-view>
