--- a/web/www/templates/createGroups.html
+++ b/web/www/templates/createGroups.html
@@ -7,8 +7,8 @@
 				<label>
 					<span class="input-label">Course Code</span>
 					<select ng-model="create.courseCode">
-						<option>CMPT</option>
-						<option>MATH</option>
+					<option></option>
+						<option ng-repeat="option in codes.options">{{option}}</option>
 					</select>
 				</label>
 				<label>
@@ -34,12 +34,11 @@
 					  <option>12:00</option>
 					</select>
 				</label>
-			</ion-item>
-			<ion-item class="item-input">
 				<label>
 					<span class="input-label">Date</span>
-					<input type="date" ng-model="date">
+					<input type="date" ng-model="create.date">
 				</label>
+				
 			</ion-item>
 			<ion-item class="item-input">
 				<label>
@@ -68,7 +67,6 @@
 						<option>9</option>
 						<option>10</option>
 					</select>
-					
 				</label>
 			</ion-item>
 			<ion-item>
