scroll bar if content is longer than screen

--- a/web/www/css/style.css
+++ b/web/www/css/style.css
@@ -7,13 +7,5 @@
 
 ion-content{
 	background-color:#AA0000;
-}
-
-.scroll{
-	height:100%;
-}
-
-i{
-	margin-left:auto;
-	margin-right:auto;
+	overflow:auto !important;
 }
