--- a/web/www/templates/createGroups.html
+++ b/web/www/templates/createGroups.html
@@ -1,6 +1,6 @@
 <ion-view view-title="Create">
   <ion-content>
-    <ion-list class="card has-header">
+    <ion-list class="card">
 		<ion-item class="item-divider">Create Study Groups</ion-item>
 		<form ng-submit="createInput()">
 			<ion-item class="item-input">
