--- a/web/www/templates/search.html
+++ b/web/www/templates/search.html
@@ -5,10 +5,18 @@
 		<form <!--ng-submit="searchInput(groupID)"-->>
 			<ion-item >
 				<label class="item-input item-select">
+				<label>
 					<span class="input-label">Course</span>
-					<select>
-					  <option>courses</option>
+					<select ng-model="search.courseCode">
+					  <option ng-repeat="option in codes.options">{{option}}</option>
 					</select>
+				</label>
+				</label>
+			</ion-item>
+			<ion-item>
+				<label class="item-input item-select">
+					<span class="input-label">Course Code</span>
+					<input type="text" ng-model="search.courseNum">
 				</label>
 			</ion-item>
 			<ion-item>
@@ -16,17 +24,29 @@
 					<span class="input-label">Time</span>
 					<select>
 					  <option>1:00</option>
+					  <option>2:00</option>
+					  <option>3:00</option>
+					  <option>4:00</option>
+					  <option>5:00</option>
+					  <option>6:00</option>
+					  <option>7:00</option>
+					  <option>8:00</option>
+					  <option>9:00</option>
+					  <option>10:00</option>
+					  <option>11:00</option>
+					  <option>12:00</option>
 					</select>
 				</label>
 			</ion-item>
 			<ion-item>
 				<label class="item-input item-select">
 					<span class="input-label">Capacity</span>
-					<select>
-					  <option>1</option>
-					</select>
+					<input type="text" ng-model="search.capacity">
 				</label>
 			</ion-item>
+			<label class="item">
+				<button class="button button-block button-positive" type="submit">Search</button>
+			</label>
 		</form>
 	</ion-list>
   </ion-content>
