--- a/web/www/templates/profile.html
+++ b/web/www/templates/profile.html
@@ -7,7 +7,7 @@
 			<!--<i class="padding item icon ion-person"></i>-->
 			<div class="list">
 				<label class="item item-input">
-					<input type="file" name="filename" accept="image/gif, image/jpeg, image/png" onchange="readURL(this);" ng-model="profile.picture">
+					<input type="file" name="filename" accept="image/gif, image/jpeg, image/png" onchange="readURL(this);" ng-model="profile.picture"></input>
 				</label>
 				<img id="image-holder" src="#" alt="your image"/>
 				<label class="item item-input">
