--- a/web/www/templates/studygroup.html
+++ b/web/www/templates/studygroup.html
@@ -22,6 +22,9 @@
 		<ion-item>
 			<button class="button button-block button-dark">Join</button>
 		</ion-item>
+		<ion-item>
+			<button class="button button-block button-dark" ng-click="del()">Delete</button>
+		</ion-item>
 	</ion-list>
   </ion-content>
 </ion-view>
