Fixed Study Group Create

--- a/web/www/templates/studygroups.html
+++ b/web/www/templates/studygroups.html
@@ -1,4 +1,4 @@
-<ion-view view-title="My Study Groups">
+<ion-view cache-view="false" view-title="My Study Groups">
   <ion-content>
     <ion-list ng-repeat="studygroup in studygroups" class="card">
       <ion-item href="#/app/studygroups/{{studygroup.id}}">
