--- a/web/www/templates/authView.html
+++ b/web/www/templates/authView.html
@@ -1,13 +1,10 @@
 <!--Authentication view: Login and Sign up pages are sliders that swithces between pages by swiping the screen or clicking the pager-->
-<ion-view hide-back-button="true" class="loginView">
-<ion-content ng-controller="AppCtrl">
 
+<link href="css/sliders.css" rel="stylesheet">
+<ion-content ng-controller="AppCtrl" >
 	<ion-slide-box pager-click="changeSlide(index)">
-		<ion-slide>
-         
-		<ion-scroll zooming="true" direction="xy" style="height: 100%">
+		<ion-slide class="row responsive-sm responsive-md">
 		<ion-header-bar class="bar-dark"><h1 class="title">Login</h1></ion-header-bar>
-                <div class="row responsive-sm responsive-md">
     <div class="col col-50 col-offset-25">
 				<div class="well list padding has-header"> 
 				<img class="item item-image" src="..\img\slogo4.png">
@@ -28,19 +25,12 @@
 						<button class="btn btn-primary button button-dark button-block" ng-disabled="loginForm.$invalid" ng-click="auth.login()">Submit</button>
                         <a>Create Account</a>
 					</form>
-				</div>
                   </div>
          </div>
-
-		</ion-scroll>
-       
 		</ion-slide>
-	
 		
-		<ion-slide>
-		<ion-scroll zooming="true" direction="xy" style="height: 100%">
+		<ion-slide class="row responsive-sm responsive-md">
 			<ion-header-bar class="bar-dark"><h1 class="title">Sign Up</h1></ion-header-bar>
-			 <div class="row responsive-sm responsive-md">
     <div class="col col-50 col-offset-25">
 				<div class="list has-header padding">
 					<img class="item item-image" src="..\img\slogo4.png"> 
@@ -59,10 +49,7 @@
                     <button class="btn btn-primary button button-dark button-block" ng-click="auth.signup()">Sign Up</button>
 				</div>
 			</div>
-            </div>
 			
-		</ion-scroll>	
 		</ion-slide>
 	</ion-slide-box>
 </ion-content>
-</ion-view>
