--- a/web/www/templates/createGroups.html
+++ b/web/www/templates/createGroups.html
@@ -3,13 +3,14 @@
     <ion-list class="card">
 		<ion-item class="item-divider">Create Study Groups</ion-item>
 		<form ng-submit="createInput()">
-			<ion-item class="item-input">
+			<ion-item>
+				<label class="item-input item-select">
 					<span class="input-label">Course Code</span>
 					<select ng-model="create.courseCode">
-					<option></option>
 						<option ng-repeat="option in codes.options">{{option}}</option>
 					</select>
-				<label>
+				</label>
+				<label class="item-input">
 					<span class="input-label">Course Number</span>
 					<input type="text" ng-model="create.courseNumber">
 				</label>
@@ -59,11 +60,6 @@
 					  <option>6:30</option>
 					  <option>6:45</option>
 					  <option>7:00</option>
-					</select>
-					</select>
-					</select>
-					</select>
-					</select>
 					</select>
 				</label>
 				<label>
