--- a/web/www/templates/search.html
+++ b/web/www/templates/search.html
@@ -5,22 +5,20 @@
 		<form ng-submit="searchInput()">
 			<ion-item >
 				<label class="item-input item-select">
-				<label>
 					<span class="input-label">Course</span>
 					<select ng-model="search.courseCode">
 					  <option ng-repeat="option in codes.options">{{option}}</option>
 					</select>
 				</label>
-				</label>
 			</ion-item>
 			<ion-item>
-				<label class="item-input item-select">
+				<label class="item-input">
 					<span class="input-label">Course Code</span>
 					<input type="text" ng-model="search.courseNumber">
 				</label>
 			</ion-item>
 			<ion-item>
-				<label class="item-input item-select">
+				<label class="item-input">
 					<span class="input-label">Capacity</span>
 					<input type="text" ng-model="search.capacity">
 				</label>
