--- a/web/www/templates/studygroup.html
+++ b/web/www/templates/studygroup.html
@@ -19,12 +19,11 @@
 		<ion-item>
 			<p>Description:{{group.description}}</p>
 		</ion-item>
-		<ion-item>
-			<button class="button button-block button-dark">Join</button>
+		<ion-item class="button-bar">
+		  <a class="button button-dark">Join</a>
+		  <a class="button button-dark" ng-click="del()">Delete</a>
 		</ion-item>
-		<ion-item>
-			<button class="button button-block button-dark" ng-click="del()">Delete</button>
-		</ion-item>
+		
 	</ion-list>
   </ion-content>
 </ion-view>
