--- a/web/www/templates/authView.html
+++ b/web/www/templates/authView.html
@@ -42,6 +42,10 @@
 						<span class="input-label">Password:</span>
                         <input type="password" class="form-control" placeholder="Password" ng-model="auth.password">
 					</label>
+					<label class = "item item-input">
+						<span class="input-label">Repeat password:</span>
+                        <input type="password" class="form-control" placeholder="Password" ng-model="auth.repeatPassword">
+					</label>
                     <button class="btn btn-primary button button-dark button-block" ng-click="auth.signup()">Sign Up</button>
 				</div>
 			</div>
