--- a/web/www/templates/createGroups.html
+++ b/web/www/templates/createGroups.html
@@ -18,7 +18,7 @@
 			<ion-item class="item-input">
 				<label>
 					<span class="input-label">Start Time</span>
-					<select ng-model="create.time">
+					<select ng-model="create.startTime">
 					  <option>9:00</option>	
 					  <option>9:15</option>
 					  <option>9:30</option>
