Name for signup

--- a/web/www/templates/authView.html
+++ b/web/www/templates/authView.html
@@ -35,6 +35,14 @@
 				<div class="list has-header padding">
 					<img class="item item-image" src="..\img\slogo4.png"> 
 					<label class = "item item-input">
+						<span class="input-label">First Name:</span>
+                        <input type="text" class="form-control" placeholder="" ng-model="auth.name">
+					</label>
+					<label class = "item item-input">
+						<span class="input-label">Last Name:</span>
+                        <input type="text" class="form-control" placeholder="" ng-model="auth.lastname">
+					</label>
+					<label class = "item item-input">
 						<span class="input-label">Email:</span>
                         <input type="email" class="form-control" placeholder="...@sfu.ca" ng-model="auth.email">
 					</label>
