--- a/web/www/templates/studygroup.html
+++ b/web/www/templates/studygroup.html
@@ -1,7 +1,7 @@
 <ion-view view-title="StudyGroup">
   <ion-content>
     <ion-list class="card">
-		<ion-item>
+		<ion-item class="item-divider">
 			<p>Course: {{group.courseCode}} {{group.courseNumber}} </p>
 		</ion-item>
 		<ion-item>
@@ -17,7 +17,7 @@
 			<p>Location: {{group.location}}</p>
 		</ion-item>
 		<ion-item>
-			<p>Description:{{group.description}}</p>
+			<p>Description: {{group.description}}</p>
 		</ion-item>
 		<ion-item class="button-bar">
 		  <a class="button button-dark">Join</a>
