--- a/web/www/templates/createGroups.html
+++ b/web/www/templates/createGroups.html
@@ -10,13 +10,14 @@
 						<option ng-repeat="option in codes.options">{{option}}</option>
 					</select>
 				</label>
+			</ion-item>
 				<label class="item-input">
 					<span class="input-label">Course Number</span>
-					<input type="text" ng-model="create.courseNumber">
+					<input type="text" placeholder="101" ng-model="create.courseNumber">
 				</label>
 			</ion-item>
-			<ion-item class="item-input">
-				<label>
+			<ion-item>
+				<label class="item-input item-select">
 					<span class="input-label">Start Time</span>
 					<select ng-model="create.startTime">
 					  <option>9:00</option>	
@@ -62,29 +63,30 @@
 					  <option>7:00</option>
 					</select>
 				</label>
-				<label>
+			</ion-item>
+			<ion-item >
+				<label class="item-input">
 					<span class="input-label">Date</span>
 					<input type="date" ng-model="create.date">
 				</label>
-				
 			</ion-item>
-			<ion-item class="item-input">
-				<label>
+			<ion-item >
+				<label class="item-input">
 					<span class="input-label">Location</span>
-					<input type="text" ng-model="create.location">
+					<input type="text" placeholder="Location" ng-model="create.location">
 				</label>
 			</ion-item>
-			<ion-item class="item-input">
-				<label>
+			<ion-item >
+				<label class="item-input">
 					<span class="input-label">Description</span>
-					<input type="text" ng-model="create.description">
+					<input type="text" placeholder="Description" ng-model="create.description">
 				</label>
 			</ion-item>
-			<ion-item class="item-input">
-				<label>
+			<ion-item >
+				<label class="item-input item-select">
 					<span class="input-label">Capacity</span>
 					<select ng-model="create.capacity">
-						<option>1</option>
+						<option selected>1</option>
 						<option>2</option>
 						<option>3</option>
 						<option>4</option>
@@ -98,7 +100,7 @@
 				</label>
 			</ion-item>
 			<ion-item>
-				<button class="button button-block button-positive" type="submit">Save</button>
+				<button class="button button-block button-dark" type="submit">Save</button>
 			</ion-item>
 		</form>
 	</ion-list>
